--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </svg>
         </i>
       </div>
-      <h1>Success</h1>
+      <h1>PRU-E-BA</h1>
       <p>You are now all set up to work through the labs.</p>
     </div>
     <a href="https://vercel.com">
